<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="shop" type="com.victor.ko.jeench.service.model.Shop"/>
        <variable name="callback" type="com.victor.ko.jeench.view.callback.ShopClickCallback"/>
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="@{() ->  callback.onClick(shop)}"
        android:layout_marginStart="@dimen/item_horizontal_margin"
        android:layout_marginEnd="@dimen/item_horizontal_margin"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/icon"
                android:layout_width="110dp"
                android:layout_height="110dp"

                android:gravity="start"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                android:contentDescription="TODO"
                app:imageFromUrl="@{shop.item_image}"/>

            <!--ImageView
            android:background="@color/colorAccent"
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/plant_detail_image_content_description"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:imageFromUrl="@{viewModel.plant.imageUrl}"
                app:layout_collapseMode="parallax" /-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/row1"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:text="@string/line_1"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/row2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:text="@string/line_2"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/row3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:text="@string/line_3"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>
